# s3fs

./: .flake8.ini  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Pipfile  dependencies.sh  push_to_pypi.sh  pyproject.toml  pytest.ini  release-procedure.md  requirements-dev.yml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_download.py  generate_test_files.py
ci/: env.yaml
docs/: environment.yml
docs/source/: changelog.rst  conf.py  development.rst  index.rst
downstream_tests/: test_dask_dataframe.py
s3fs/: __init__.py  core.py  errors.py
s3fs/tests/: test_errors.py  test_s3fs.py
s3fs/tests/derived/: s3fs_fixtures.py  s3fs_test.py
tests/: conftest.py  test_mapping.py  test_s3fs.py
